# zed-aztec

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  extension.toml
docs/: zed-extension-api-opportunities.md
languages/aztec/: config.toml  highlights.scm
src/: lib.rs
